apps/kgs/ingress.production.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: production
  name: kgs1
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPCS"
spec:
  tls:
    - hosts:
        - kgs1.short-d.com
      secretName: short-d.com-tls
  rules:
    - host: kgs1.short-d.com
      http:
        paths:
          - backend:
              serviceName: kgs-1
              servicePort: grpc
