apps/kgs/production.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: production
  name: kgs-1
  labels:
    app: kgs
    id: "1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kgs
      id: "1"
  template:
    metadata:
      labels:
        app: kgs
        id: "1"
    spec:
      containers:
        - name: kgs
          image: byliuyang/kgs:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: certs
              mountPath: "/etc/certs"
              readOnly: true
          args:
            - ./scripts/wait-for-it
            - -s
            - -t
            - "0"
            - localhost:5432
            - --
            - ./build/app
            - start
            - --migration
            - app/adapter/db/migration
        - name: db
          image: postgres:12
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: kgs-1-db-data

      volumes:
        - name: certs
          secret:
            secretName: short-d.com-tls
            items:
              - key: tls.crt
                path: tls.crt
              - key: tls.key
                path: tls.key
        - name: kgs-1-db-data
          persistentVolumeClaim:
            claimName: kgs-1-db-data
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  namespace: production
  name: kgs-1
spec:
  selector:
    app: kgs
    id: "1"
  ports:
    - name: grpc
      port: 8080
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: production
  name: kgs1
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPCS"
spec:
  tls:
    - hosts:
        - kgs1.short-d.com
      secretName: short-d.com-tls
  rules:
    - host: kgs1.short-d.com
      http:
        paths:
          - backend:
              serviceName: kgs-1
              servicePort: grpc
