apps/kgs/staging.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: staging
  name: kgs-1
  labels:
    app: kgs
    id: "1"
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: kgs
      id: "1"
  template:
    metadata:
      labels:
        app: kgs
        id: "1"
    spec:
      containers:
        - name: kgs
          image: byliuyang/kgs-staging:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: certs
              mountPath: "/etc/certs"
              readOnly: true
          args:
            - ./scripts/wait-for-it
            - -s
            - -t
            - "0"
            - $(DB_HOST):$(DB_PORT)
            - --
            - ./build/app
            - start
            - --migration
            - app/adapter/db/migration
      volumes:
        - name: certs
          secret:
            secretName: short-d.com-tls
            items:
              - key: tls.crt
                path: tls.crt
              - key: tls.key
                path: tls.key
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  namespace: staging
  name: kgs-1
spec:
  selector:
    app: kgs
    id: "1"
  ports:
    - name: grpc
      port: 8080
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: staging
  name: kgs1
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
    ingress.kubernetes.io/protocol: h2c
spec:
  tls:
    - hosts:
        - kgs1-staging.short-d.com
      secretName: short-d.com-tls
  rules:
    - host: kgs1-staging.short-d.com
      http:
        paths:
          - backend:
              serviceName: kgs-1
              servicePort: grpc
